projects/vb6parse/snapshots/syntax/library/statements/reset/multiple_reset_statements.snap
---
source: projects/vb6parse/src/syntax/library/statements/file_operations/reset.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: ResetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ResetKeyword
                  text: Reset
            - kind: Newline
              text: "\n"
            - kind: Whitespace
              text: "    "
            - kind: CallStatement
              children:
                - kind: Identifier
                  text: DoSomething
                - kind: Newline
                  text: "\n"
            - kind: ResetStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ResetKeyword
                  text: Reset
            - kind: Newline
              text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
